添加可调速动画

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
   <div class="code-wrapper">
     <pre id="code"></pre>
   </div>
+  <div class="actions">
+    <button data-speed="slow">慢速</button>
+    <button data-speed="normal" class="active">中速</button>
+    <button data-speed="fast">快速</button>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
