添加代码高亮效果

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>画皮卡丘</title>
+  <script src="./prism/prism.css"></script>
   <link rel="stylesheet" href="./css/default.css">
   <style id="styleTag"></style>
 </head>
@@ -36,6 +37,7 @@
     <button data-speed="fast">快速</button>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="./prism/prism.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
